# libtorch_test

./: CMakeLists.txt  README.md  libtorch_test.cpp
